Add 'Developed by Bhaumik Gohel' credit to sidebar and README

--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
                                 <div style={{ fontSize: '0.70rem', color: 'var(--accent)', fontWeight: 700, textTransform: 'uppercase', opacity: 0.8 }}>Velocity</div>
                                 <div style={{ fontSize: '1.5rem', fontWeight: 800, color: 'var(--accent)', margin: '0.2rem 0' }}>{Math.round(jobs.length / 7) || 0} / wk</div>
                             </div>
+                            <div style={{ marginTop: '1rem', fontSize: '0.75rem', color: 'var(--text-muted)', textAlign: 'center', fontWeight: 500 }}>
+                                Developed by Bhaumik Gohel
+                            </div>
                         </div>
                     </aside>
 
